# GosVM

GosVM/: .gitignore  CMakeLists.txt  Gos.cpp  GosVM.c  GosVM.h  Stack.c  Stack.h  Test.c  VM.cpp
